--- a/index.html
+++ b/index.html
@@ -216,10 +216,11 @@
             <br><br><br>
             <p class="p-desc">
                 Copyright &copy;2025 <a href="#">Simon Says</a> 
-                | <a class="footer-a" href="#">SimonSays.com</a>
-                | <a class="footer-a" href="#">Sitemap</a>
+                | <a class="footer-a" href="#">Security</a>
+		| <a class="footer-a" href="#">Contact</a>  
                 | <a class="footer-a" href="#">Privacy Policy</a>
                 | <a class="footer-a" href="#">Terms of Service</a>
+                | <a class="footer-a" href="#">Manage Cookies</a>
             </p>
 	    </footer>
     </body>
