--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             <br><br><br>
             <p class="p-desc">
                 Copyright &copy;2025 <a href="#">Simon Says</a>
-		| <a class="footer-a" href="#">Terms</a>
+		| <a class="footer-a" href="#">Terms of Service</a>
                 | <a class="footer-a" href="#">Security</a>
 		| <a class="footer-a" href="#">Privacy</a>
 		| <a class="footer-a" href="#">Contact</a>  
