--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
                 <div class="actions">
                     <!-- Sign in -->
                     <a href="#Sign In" class="btn">Sign in</a>        
+		    <a href="#Sign In" class="btn">Log in</a>   
                 </div>
             </div>
         </header>
