--- a/index.html
+++ b/index.html
@@ -149,12 +149,9 @@
             display: inline-block;
             text-align: center;
         }
-        .login-button {
-            margin-left: 43%;
-        }
         .play-button {
-            background-color: black;
-            color: white;
+            background-color: white;
+            color: black;
         }
 
         /* Footer */
