--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             cursor: pointer;
         }
 
-        /* Section */
+         /* Section */
         h1 {
             font-size: 3rem;
             font-weight: bold;
@@ -135,6 +135,7 @@
         }
         .button-container {
             display: flex;
+            justify-content: center;
             gap: 15px;
         }
         .button {
@@ -149,7 +150,7 @@
             display: inline-block;
             text-align: center;
         }
-	     
+   
         /* Footer */
         .footer {
             position: absolute;
