--- a/index.html
+++ b/index.html
@@ -190,8 +190,9 @@
                 <!-- Search and CTA -->
                 <div class="actions">
                     <!-- Sign in -->
-                    <a href="#Sign In" class="btn">Sign in</a>        
-		    <a href="#Sign In" class="btn">Log in</a>   
+                    <a href="#Sign In" class="btn">Sign in</a>           
+		    <!-- Log In in -->
+		    <a href="#Log In" class="btn">Log in</a>
                 </div>
             </div>
         </header>
