--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         }
         .actions {
             display: flex;
-            right: 0;
+            right: -50px;
             position: absolute;
             top: 10px;
             gap: 10px;
@@ -203,12 +203,12 @@
             <br><br><br>
             <p class="p-desc">
                 Copyright &copy;2025 <a href="#">Simon Says</a>
-		| <a class="footer-a" href="#">Terms of Service</a>
+                | <a class="footer-a" href="#">Terms of Service</a>
                 | <a class="footer-a" href="#">Privacy</a>
-		| <a class="footer-a" href="#">Security</a>
-		| <a class="footer-a" href="#">Contact</a>  
+        	| <a class="footer-a" href="#">Security</a>
+        	| <a class="footer-a" href="#">Contact</a>  
                 | <a class="footer-a" href="#">Manage Cookies</a>
             </p>
-	    </footer>
+        </footer>
     </body>
 </html>
