--- a/index.html
+++ b/index.html
@@ -99,9 +99,8 @@
         }
         .actions {
             display: flex;
-            right: -50px;
-            position: absolute;
-            top: 10px;
+            right: 20px;
+            align-items: center;
             gap: 10px;
         }
         .btn {
@@ -122,7 +121,7 @@
             cursor: pointer;
         }
 
-        /* Section */
+         /* Section */
         h1 {
             font-size: 3rem;
             font-weight: bold;
@@ -151,7 +150,7 @@
             display: inline-block;
             text-align: center;
         }
-
+   
         /* Footer */
         .footer {
             position: absolute;
@@ -176,8 +175,10 @@
         }
     </style>
     <body>
+        <!-- Header -->
         <header class="header">
             <div class="container-1">
+                <!-- Navigation -->
                 <nav class="nav">
                     <ul class="nav-list">
                         <li><a id="nav-active" href="index.html">Home</a></li>
@@ -186,12 +187,17 @@
                         <li><a href="hard.html">Hard Mode</a></li>
                     </ul>
                 </nav>
+                <!-- Search and CTA -->
                 <div class="actions">
-                    <a href="#Sign In" class="btn">Sign in</a>
-                    <a href="#Log In" class="btn">Log in</a>        
+                    <!-- Sign in -->
+                    <a href="#Sign In" class="btn">Sign in</a>           
+		            <!-- Log In in -->
+		            <a href="#Log In" class="btn">Log in</a>
                 </div>
             </div>
         </header>
+
+        <!-- Section -->
         <section>
             <h1>SIMON SAYS</h1>
             <p class="p-desc">Are you ready to risk it all? In Simon Says, one wrong move could make you fall!</p>
@@ -199,16 +205,18 @@
                 <a href="choice.html" class="button play-button">Play</a>
             </div>
         </section>
+        
+        <!-- Footer -->
         <footer class="footer">
             <br><br><br>
             <p class="p-desc">
                 Copyright &copy;2025 <a href="#">Simon Says</a>
-                | <a class="footer-a" href="#">Terms of Service</a>
+		        | <a class="footer-a" href="#">Terms of Service</a>
                 | <a class="footer-a" href="#">Privacy</a>
-        	| <a class="footer-a" href="#">Security</a>
-        	| <a class="footer-a" href="#">Contact</a>  
+	        	| <a class="footer-a" href="#">Security</a>
+		        | <a class="footer-a" href="#">Contact</a>  
                 | <a class="footer-a" href="#">Manage Cookies</a>
             </p>
-        </footer>
+	    </footer>
     </body>
 </html>
