--- a/index.html
+++ b/index.html
@@ -99,8 +99,9 @@
         }
         .actions {
             display: flex;
-            right: 20px;
-            align-items: center;
+            right: -90px;
+            position: absolute;
+            top: 10px;
             gap: 10px;
         }
         .btn {
@@ -121,7 +122,7 @@
             cursor: pointer;
         }
 
-         /* Section */
+        /* Section */
         h1 {
             font-size: 3rem;
             font-weight: bold;
@@ -150,7 +151,7 @@
             display: inline-block;
             text-align: center;
         }
-   
+
         /* Footer */
         .footer {
             position: absolute;
@@ -169,16 +170,19 @@
             color: white; 
             text-decoration: none;
         }
-        .footer a:hover {
+        footer a:hover {
             text-decoration: underline;
             color: #ff6d79;
         }
+        .footer a[href="#"] {
+            pointer-events: none;
+            text-decoration: none;
+            color: white;
+        }
     </style>
     <body>
-        <!-- Header -->
         <header class="header">
             <div class="container-1">
-                <!-- Navigation -->
                 <nav class="nav">
                     <ul class="nav-list">
                         <li><a id="nav-active" href="index.html">Home</a></li>
@@ -187,17 +191,12 @@
                         <li><a href="hard.html">Hard Mode</a></li>
                     </ul>
                 </nav>
-                <!-- Search and CTA -->
                 <div class="actions">
-                    <!-- Sign in -->
-                    <a href="user.html" class="btn">Sign in</a>           
-		    <!-- Log In in -->
-		    <a href="user.html" class="btn">Log in</a>
+                    <a href="#Sign In" class="btn">Sign in</a>
+                    <a href="#Log In" class="btn">Log in</a>        
                 </div>
             </div>
         </header>
-
-        <!-- Section -->
         <section>
             <h1>SIMON SAYS</h1>
             <p class="p-desc">Are you ready to risk it all? In Simon Says, one wrong move could make you fall!</p>
@@ -205,18 +204,16 @@
                 <a href="choice.html" class="button play-button">Play</a>
             </div>
         </section>
-        
-        <!-- Footer -->
         <footer class="footer">
             <br><br><br>
             <p class="p-desc">
                 Copyright &copy;2025 <a href="#">Simon Says</a>
-		| <a class="footer-a" href="#">Terms of Service</a>
-        	| <a class="footer-a" href="#">Privacy</a>
-        	| <a class="footer-a" href="#">Security</a>		       
-		| <a class="footer-a" href="#">Contact</a>  
+        	| <a class="footer-a" href="#">Terms of Service</a>
+                | <a class="footer-a" href="#">Privacy</a>
+       		| <a class="footer-a" href="#">Security</a>
+      	        | <a class="footer-a" href="#">Contact</a>  
                 | <a class="footer-a" href="#">Manage Cookies</a>
             </p>
-	    </footer>
-     </body>
+        </footer>
+    </body>
 </html>
