--- a/index.html
+++ b/index.html
@@ -150,7 +150,16 @@
             display: inline-block;
             text-align: center;
         }
-   
+	.instructions {
+            width: 45%;
+            font-size: 1.0rem;
+            text-align: center;
+        }
+        .scoring {
+            width: 45%;
+            font-size: 1.0rem;
+            text-align: center;
+        }
         /* Footer */
         .footer {
             position: absolute;
@@ -204,8 +213,25 @@
             <div class="button-container">
                 <a href="choice.html" class="button play-button">Play</a>
             </div>
+	<div class="section-container">
+            <div class="instructions">
+            <h2>HOW TO PLAY:</h2>
+                    <ul class="instructions-list">
+                        <li>A color flashes, and the player must press the corresponding button.</li>
+                        <li>Each round, the sequence increases by one new color.</li>
+                        <li>The player must memorize and repeat the sequence correctly.</li>
+                        <li>he game continues until the player makes a mistake or completes the final sequence.</li>
+                    </ul>
+             </div>
+             <div class="scoring">
+             <h2>LEVELS:</h2>
+                    <ul class="instructions-list">
+                        <li>Easy: Slower sequences (5 colors).</li>
+                        <li>Hard: Faster sequences (10 colors).</li>
+                    </ul>
+             </div>
+        </div>
         </section>
-        
         <!-- Footer -->
         <footer class="footer">
             <br><br><br><br>
