--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             align-items: center;
             margin: 0;
             font-family: "Times New Roman", serif;
-            background-image: url(space1.png);
+            background-image: url(space.png);
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -23,7 +23,6 @@
             overflow-y: hidden;
         }
 
-        /* Header */
         .header {
             position: relative; 
             top: 0;
@@ -79,6 +78,7 @@
             width: 100%;
             background-color: #ff4655;
         }
+    
         .nav-list a:hover, #nav-active:hover{
             color: #ff4651;
         }
@@ -121,8 +121,14 @@
             cursor: pointer;
         }
 
+        .section-container {
+            display: flex;
+            justify-content: space-evenly;
+            max-width: 1000px;
+            margin: 20px auto 40px auto;
+        }
          /* Section */
-        h1 {
+         h1 {
             font-size: 3rem;
             font-weight: bold;
             margin-top: 25vh;
@@ -150,12 +156,12 @@
             display: inline-block;
             text-align: center;
         }
-	.instructions {
+
+        .instructions {
             width: 45%;
             font-size: 1.0rem;
             text-align: center;
         }
-        /* Footer */
         .footer {
             position: absolute;
             bottom: 0;
@@ -179,10 +185,8 @@
         }
     </style>
     <body>
-        <!-- Header -->
         <header class="header">
             <div class="container-1">
-                <!-- Navigation -->
                 <nav class="nav">
                     <ul class="nav-list">
                         <li><a id="nav-active" href="index.html">Home</a></li>
@@ -199,38 +203,36 @@
 		    <a href="user.html" class="btn">Log in</a>
                 </div>
             </div>
+            </div>
         </header>
-
-        <!-- Section -->
         <section>
             <h1>SIMON SAYS</h1>
             <p class="p-desc">Are you ready to risk it all? In Simon Says, one wrong move could make you fall!</p>
             <div class="button-container">
                 <a href="choice.html" class="button play-button">Play</a>
             </div>
-	<div class="section-container">
-            <div class="instructions">
-            <h2>HOW TO PLAY:</h2>
+            <div class="section-container">
+                <div class="instructions">
+                    <h2>HOW TO PLAY:</h2>
                     <ul class="instructions-list">
                         <li>A color flashes, and the player must press the corresponding button.</li>
                         <li>Each round, the sequence increases by one new color.</li>
                         <li>The player must memorize and repeat the sequence correctly.</li>
                         <li>he game continues until the player makes a mistake or completes the final sequence.</li>
                     </ul>
-	    </div>
-        </div>
+                </div>
+            </div>
         </section>
-        <!-- Footer -->
         <footer class="footer">
             <br><br><br><br>
             <p class="p-desc">
                 Copyright &copy;2025 <a href="#">Simon Says</a>
-		| <a class="footer-a" href="#">Terms of Service</a>
-        	| <a class="footer-a" href="#">Privacy</a>
-            	| <a class="footer-a" href="#">Security</a>		       
-		| <a class="footer-a" href="#">Contact</a>  
-                | <a class="footer-a" href="#">Manage Cookies</a>
+                | <a href="#">Terms of Service</a>
+                | <a href="#">Privacy</a>
+                | <a href="#">Security</a>
+                | <a href="#">Contact</a>
+                | <a href="#">Manage Cookies</a>
             </p>
-	    </footer>
-     </body>
+        </footer>
+    </body>
 </html>
