--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             align-items: center;
             margin: 0;
             font-family: "Times New Roman", serif;
-            background-image: url(space.png);
+            background-image: url(space1.png);
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
