--- a/index.html
+++ b/index.html
@@ -162,6 +162,11 @@
             font-size: 1.0rem;
             text-align: center;
         }
+	 .scoring {
+            width: 45%;
+            font-size: 1.0rem;
+            text-align: center;
+        }   
         .footer {
             position: absolute;
             bottom: 0;
@@ -219,6 +224,14 @@
                         <li>Each round, the sequence increases by one new color.</li>
                         <li>The player must memorize and repeat the sequence correctly.</li>
                         <li>he game continues until the player makes a mistake or completes the final sequence.</li>
+                    </ul>
+		 </div>
+		</div>
+                <div class="scoring">
+                    <h2>LEVELS:</h2>
+                    <ul class="instructions-list">
+                        <li>Easy: Slower sequences (5 colors).</li>
+                        <li>Hard: Faster sequences (10 colors).</li>
                     </ul>
                 </div>
             </div>
