--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                         <li>A color flashes, and the player must press the corresponding button.</li>
                         <li>Each round, the sequence increases by one new color.</li>
                         <li>The player must memorize and repeat the sequence correctly.</li>
-                        <li>he game continues until the player makes a mistake or completes the final sequence.</li>
+                        <li>The game continues until the player makes a mistake or completes the final sequence.</li>
                     </ul>
 		 </div>
 		</div>
