--- a/index.html
+++ b/index.html
@@ -246,8 +246,8 @@
                 <div class="scoring">
                     <h2>SCORING:</h2>
                     <ul>
-                        <li>Easy: Slow sequebce (5 colors)</li>
-                        <li>Hard: Fast sequebce (10 colors)</li>
+                        <li>Easy: Slow sequence (5 colors)</li>
+                        <li>Hard: Fast sequence (10 colors)</li>
                     </ul>
 		        </div>
             </div>
