--- a/index.html
+++ b/index.html
@@ -215,11 +215,11 @@
                 </nav>
                 <!-- Search and CTA -->
                 <div class="actions">
-                    <!-- Sign in -->
-                    <a href="user.html" class="btn">Sign in</a>           
-		            <!-- Log In in -->
-		            <a href="user.html" class="btn">Log in</a>
-                </div>
+		    <!-- Log In in -->
+		    <a href="user.html" class="btn">Log in</a>
+                            <!-- Sign Up -->
+                            <a href="user.html" class="btn">Sign Up</a>           
+		 </div>
             </div>
         </header>
 
