--- a/index.html
+++ b/index.html
@@ -223,6 +223,16 @@
             </div>
         </header>
 
+	<!-- User Forms -->
+	<div id="user-forms" style="display: none; text-align: center; margin-top: 20px;">
+	        <h2 id="form-title">User  Registration</h2>
+	        <input type="text" id="username" placeholder="Username" required>
+	        <input type="password" id="password" placeholder="Password" required>
+	        <button onclick="registerUser ()">Register</button>
+	        <button onclick="loginUser ()">Login</button>
+	        <button onclick="hideUser Forms()">Cancel</button>
+  	  </div>
+	
         <!-- Section -->
         <section>
             <div class="play-container">
@@ -265,5 +275,7 @@
                 | <a href="#">Manage Cookies</a>
             </p>
         </footer>
+	    
+	<script src="userManagement.js"></script>
     </body>
 </html>
