--- a/user.html
+++ b/user.html
@@ -209,5 +209,7 @@
                 | <a class="footer-a" href="#">Terms of Service</a>
             </p>
         </footer>
+    
+	    <script src="userManagement.js"></script>
     </body>
 </html>
