--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                     </ul>
 		        </div>
                 <div class="scoring">
-                    <h2>SCORING:</h2>
+                    <h2>LEVELS:</h2>
                     <ul>
                         <li>Easy: Slow sequence (5 colors)</li>
                         <li>Hard: Fast sequence (10 colors)</li>
