--- a/user.html
+++ b/user.html
@@ -268,5 +268,6 @@
                 | <a class="footer-a" href="#">Terms of Service</a>
             </p>
         </footer>
+        <script src="choice.html"></script>
     </body>
 </html>
