--- a/user.html
+++ b/user.html
@@ -207,7 +207,7 @@
                 <nav class="nav">
                     <ul class="nav-list">
                         <li><a href="index.html">Home</a></li>
-                        <li><a id="nav-active" href="choice.html">Mode</a></li>
+                        <li><a href="choice.html">Mode</a></li>
                         <li><a href="easy.html">Easy Mode</a></li>
                         <li><a href="hard.html">Hard Mode</a></li>
                     </ul>
