--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
                     <ul class="nav-list">
                         <li><a id="nav-active" href="index.html">Home</a></li>
                         <li><a href="choice.html">Mode</a></li>
+			<li><a href="info.html">About</a></li>
                     </ul>
                 </nav>
                 <!-- Search and CTA -->
