--- a/index.html
+++ b/index.html
@@ -209,7 +209,8 @@
                     <ul class="nav-list">
                         <li><a id="nav-active" href="index.html">Home</a></li>
                         <li><a href="choice.html">Mode</a></li>
-			<li><a href="info.html">About</a></li>
+			<li><a href="easy.html">Easy Mode</a></li>
+                        <li><a href="hard.html">Hard Mode</a></li>
                     </ul>
                 </nav>
                 <!-- Search and CTA -->
