--- a/easy.html
+++ b/easy.html
@@ -13,6 +13,8 @@
                     <ul class="nav-list">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="choice.html">Mode</a></li>
+			<li><a href="easy.html">Easy Mode</a></li>
+                        <li><a href="hard.html">Hard Mode</a></li>
                     </ul>
                 </nav>
             </div>
