--- a/index.html
+++ b/index.html
@@ -159,13 +159,13 @@
 
         .instructions {
             width: 45%;
-            font-size: 1.0rem;
+            font-size: 1.1rem;
             text-align: center;
         }
         .scoring {
             width: 45%;
             font-size: 1.0rem;
-            text-align: center;
+            text-align: left;
         }
         .footer {
             position: absolute;
