--- a/index.html
+++ b/index.html
@@ -156,7 +156,6 @@
             display: inline-block;
             text-align: center;
         }
-
         .instructions {
             width: 45%;
             font-size: 1.1rem;
@@ -167,6 +166,8 @@
             font-size: 1.0rem;
             text-align: left;
         }
+
+	/* Footer */
         .footer {
             position: absolute;
             bottom: 0;
