--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         .instructions {
             width: 45%;
             font-size: 1.1rem;
-            text-align: center;
+            text-align: left;
         }
         .scoring {
             width: 45%;
