--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
                 <div class="scoring">
                     <h2>LEVELS:</h2>
                     <ul class="instructions-list">
-                        <ul>Easy: Slower sequences (5 colors).</ul>
-                        <ul>Hard: Faster sequences (10 colors).</ul>
+                        <li>Easy: Slower sequences (5 colors).</li>
+                        <li>Hard: Faster sequences (10 colors).</li>
                     </ul>
                 </div>
             </div>
