--- a/hard.html
+++ b/hard.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Hard Mode</title>
         <link rel="stylesheet" href="mode.css">
@@ -37,6 +37,7 @@
                 <button id="start">Start Game</button>
             </div>
         </section>
+
         
         <!-- Footer -->
         <footer class="footer">
