--- a/easy.html
+++ b/easy.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Easy Mode</title>
-        <link rel="stylesheet" href="mode.css">
+        <link rel="stylesheet" href="easy.css">
     </head>
     <body>
         <!-- Header -->
