--- a/choice.html
+++ b/choice.html
@@ -178,6 +178,7 @@
                         <li><a id="nav-active" href="choice.html">Mode</a></li>
                         <li><a href="easy.html">Easy Mode</a></li>
                         <li><a href="hard.html">Hard Mode</a></li>
+                        <li><a href="about.html">About</a></li>
                     </ul>
                 </nav>
             </div>
