--- a/easy.html
+++ b/easy.html
@@ -15,6 +15,7 @@
                         <li><a href="choice.html">Mode</a></li>
                         <li><a id="nav-active" href="easy.html">Easy Mode</a></li>
                         <li><a href="hard.html">Hard Mode</a></li>
+			<li><a href="about.html">About</li>
                     </ul>
                 </nav>
             </div>
