--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
                         <li><a href="choice.html">Mode</a></li>
                         <li><a href="easy.html">Easy Mode</a></li>
                         <li><a href="hard.html">Hard Mode</a></li>
+			<li><a href="about.html">About</a></li>
                     </ul>
                 </nav>
                 <!-- Search and CTA -->
