--- a/about.html
+++ b/about.html
@@ -173,30 +173,24 @@
             color: white;
         }
         .footer {
-            position: absolute;
-            bottom: 0;
-            width: 100%;
+            color: white;
             text-align: center;
-            height: 150px;
-            margin-top: 20px;
-            padding-top: 10px;
+            padding: 20px 10px;
+            margin-top: auto;
         }
+
         .p-footer {
             font-size: 1.5rem;
-            font-weight: normal;
-            margin-bottom: 30px;
+            margin-bottom: 10px;
         }
-        .footer-info {
-            text-align: center;
-            align-items: center;
-        }
+
         .footer a {
             color: white;
             text-decoration: none;
             font-size: 1.5rem;
-            font-weight: normal;
-            margin-bottom: 30px;
+            margin: 0 10px;
         }
+
         .footer a:hover {
             text-decoration: underline;
             color: #e9ebfd;
