--- a/about.html
+++ b/about.html
@@ -202,11 +202,11 @@
             <div class="container-1">
                 <nav class="nav">
                     <ul class="nav-list">
-                        <li><a id="nav-active" href="index.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="choice.html">Mode</a></li>
                         <li><a href="easy.html">Easy Mode</a></li>
                         <li><a href="hard.html">Hard Mode</a></li>
-                        <li><a href="about.html">About</a></li>
+                        <li><a id="nav-active" href="about.html">About</a></li>
                     </ul>
                 </nav>
             </div>
