--- a/hard.html
+++ b/hard.html
@@ -50,5 +50,6 @@
                 | <a class="footer-a" href="#">Terms of Service</a>
             </p>
 	    </footer>
+	<script></script>
     </body>
 </html>
