--- a/hard.html
+++ b/hard.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>Hard Mode</title>
-        <link rel="stylesheet" href="easy.css">
+        <link rel="stylesheet" href="hard.css">
     </head>
     <body>
         <!-- Header -->
