--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                 <nav class="nav">
                     <ul class="nav-list">
                         <li><a id="nav-active" href="index.html">Home</a></li>
-                        <li><a href="choice.html">Mode</a></li>
+                        <li><a href="choice.html">Games</a></li>
 			<li><a href="about.html">About</a></li>
                     </ul>
                 </nav>
