--- a/about.html
+++ b/about.html
@@ -203,9 +203,7 @@
                 <nav class="nav">
                     <ul class="nav-list">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="choice.html">Mode</a></li>
-                        <li><a href="easy.html">Easy Mode</a></li>
-                        <li><a href="hard.html">Hard Mode</a></li>
+                        <li><a href="choice.html">Games</a></li>
                         <li><a id="nav-active" href="about.html">About</a></li>
                     </ul>
                 </nav>
