--- a/easy.html
+++ b/easy.html
@@ -13,7 +13,7 @@
                     <ul class="nav-list">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="choice.html">Games</a></li>
-			<li><a href="about.html">About</li>
+			<li><a href="about.html">About</a></li>
                     </ul>
                 </nav>
             </div>
