--- a/hard.html
+++ b/hard.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Easy Mode</title>
+        <title>Hard Mode</title>
         <link rel="stylesheet" href="easy.css">
     </head>
     <body>
@@ -21,7 +21,7 @@
 
         <!-- Section -->
         <section>
-            <h1>Simon Says - Easy Mode</h1>
+            <h1>Simon Says - Hard Mode</h1>
             
             <div class="score-container">
                 <div id="score">Score: 0</div>
