--- a/index.html
+++ b/index.html
@@ -232,19 +232,12 @@
 
             <div class="section-container">
                 <div class="instructions">
-                    <h2>HOW TO PLAY:</h2>
+                    <h2>MECHANICS:</h2>
                     <ul>
                         <li>A color flashes, and the player must press the corresponding button.</li>
                         <li>Each round, the sequence increases by one new color.</li>
                         <li>The player must memorize and repeat the sequence correctly.</li>
                         <li>The game continues until the player makes a mistake or completes the final sequence.</li>
-                    </ul>
-		        </div>
-                <div class="scoring">
-                    <h2>LEVELS:</h2>
-                    <ul>
-                        <li>Easy: Slow sequence (5 colors)</li>
-                        <li>Hard: Fast sequence (10 colors)</li>
                     </ul>
 		        </div>
             </div>
