--- a/hard.html
+++ b/hard.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Hard Mode</title>
-        <link rel="stylesheet" href="easy.css">
+        <link rel="stylesheet" href="hard.css">
     </head>
     <body>
         <!-- Header -->
@@ -57,6 +57,6 @@
             </p>
 	    </footer>
         
-        <script src="easy.js"></script>
+        <script src="hard.js"></script>
     </body>
 </html>
