--- a/about.html
+++ b/about.html
@@ -228,8 +228,8 @@
         <div class="scoring">
             <h2>LEVELS</h2>
             <ul class="instructions-list">
-                <li>Easy: Slower sequences (5 colors).</li>
-                <li>Hard: Faster sequences (10 colors).</li>
+                <li>Easy: Slower sequences (1 color).</li>
+                <li>Hard: Faster sequences (5 colors).</li>
             </ul>
         </div>
 
