--- a/index.html
+++ b/index.html
@@ -4,187 +4,9 @@
         <title>Simon Says</title>
         <meta name="author" content="Group 5">
         <meta name="laboratory activity number" content="1">
-        <style>
-            body {
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-                margin: 0;
-                font-family: "Times New Roman", serif;
-                background-image: url(space1.png);
-                background-size: cover;
-                background-position: center;
-                background-repeat: no-repeat;
-                background-attachment: fixed;           
-                text-align: center;
-                color: white; 
-                overflow-x: hidden;
-                overflow-y: hidden;
-            }
-
-            /* Header */
-            .header {
-                position: relative; 
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 50px;
-                background-color: #000;
-                padding: 10px 20px;
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            }
-            .container-1 {
-                display: flex;
-                justify-content: space-between;
-                width: 100%;
-                max-width: 1200px;
-                margin: 0 auto;
-                align-items: center;
-            }
-            .nav-list {
-                list-style: none;
-                display: flex;
-                gap: 30px;
-                margin: 0;
-                padding: 0;
-            }
-            .nav-list a {
-                text-decoration: none;
-                color: #ffffff;
-                font-size: 20px;
-                font-weight: 700;
-                font-family: 'Exo 2', sans-serif !important;
-                text-transform: uppercase;
-                padding: 15px 10px;
-                letter-spacing: 2px;
-                position: relative;
-                transition: color 0.2s ease;
-            }
-            .nav-list a::after {
-                content: "";
-                position: absolute;
-                left: 0;
-                bottom: -2px;
-                width: 0;
-                height: 3px;
-                background-color: #ff4655;
-                transition: width 0.3s ease;
-                border-radius: 5px;
-            }
-            .nav-list a:hover::after, .nav-list a:active::after {
-                width: 100%;
-                background-color: #ff4655;
-            }
-        
-            .nav-list a:hover, #nav-active:hover{
-                color: #ff4651;
-            }
-            .nav-list a:active, #nav-active:active{
-                color: #ffffff;
-            }
-            #nav-active {
-                text-decoration: none;
-                color: #e73737;
-                font-size: 20px;
-                font-weight: 700;
-                font-family: 'Exo 2', sans-serif !important;
-                text-transform: uppercase;
-                padding: 15px 10px;
-                letter-spacing: 2px;
-                position: relative;
-                transition: color 0.2s ease;
-            }
-            .actions {
-                display: flex;
-                right: 20px;
-                align-items: center;
-                gap: 10px;
-            }
-            .btn {
-                text-decoration: none;
-                background-color: #000000;
-                color: #fff;
-                padding: 10px 20px;
-                font-size: 16px;
-                font-weight: 700;
-                font-family: 'Exo 2', sans-serif !important;
-                text-transform: uppercase;
-                transition: all 0.3s ease;
-            }
-            .btn:hover, .btn:active {
-                background-color: #262626;
-                border-radius: 9px;
-                color: #ff4655;
-                cursor: pointer;
-            }
-            .section-container {
-                display: flex;
-                justify-content: space-evenly;
-                max-width: 1000px;
-                margin: 20px auto 40px auto;
-            }
-            
-            /* Section */
-            h1 {
-                font-size: 3rem;
-                font-weight: bold;
-                margin-top: 33vh;
-                margin-bottom: 20px;
-            }
-            .p-desc {
-                font-size: 1.5rem;
-                font-weight: normal;
-                margin-bottom: 30px;
-            }
-            .button-container {
-                display: flex;
-                justify-content: center;
-                gap: 15px;
-            }
-            .button {
-                font-size: 1.3rem;
-                width: 100px;
-                text-decoration: none;
-                color: black;
-                font-weight: bold;
-                background-color: white;
-                padding: 10px 30px;
-                border-radius: 30px;
-                border: 2px solid black;
-                display: inline-block;
-                text-align: center;
-            }
-
-            /* Footer */
-            .footer {
-                position: absolute;
-                bottom: 0;
-                width: 100%;
-                text-align: center;
-                height: 150px;
-                margin-top: 20px;
-                padding-top: 10px;
-            }
-            .footer-info {
-                text-align: center;
-                align-items: center;
-            }
-            footer a {
-                color: white; 
-                text-decoration: none;
-                font-size: 1.5rem;
-                font-weight: normal;
-                margin-bottom: 30px;
-            }
-            .footer a:hover {
-                text-decoration: underline;
-                color: #e9ebfd;
-            }
-        </style>
+		<link rel="stylesheet" href="index.css">
     </head>
+	
     <body>
         <!-- Header -->
         <header class="header">
