--- a/user.html
+++ b/user.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Login Page</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="user.css">
 </head>
 <body>
     <!-- Header -->
