--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
                 <nav class="nav">
                     <ul class="nav-list">
                         <li><a id="nav-active" href="index.html">Home</a></li>
-                        <li><a href="choice.html">Games</a></li>
-			<li><a href="about.html">About</a></li>
+                        <li><a href="Html_folder/choice.html">Games</a></li>
+			<li><a href="Html_folder/about.html">About</a></li>
                     </ul>
                 </nav>
                 <!-- Search and CTA -->
                 <div class="actions">
                     <!-- Log In in -->
-                    <a href="user.html" class="btn">Log in</a>   
+                    <a href="Html_folder/user.html" class="btn">Log in</a>   
                 </div>
             </div>
         </header>
