--- a/Html_folder/hard.html
+++ b/Html_folder/hard.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Hard Mode</title>
-        <link rel="stylesheet" href="hard.css">
+        <link rel="stylesheet" href="../css files/hard.css">
     </head>
     <body>
         <!-- Header -->
@@ -11,9 +11,9 @@
                 <!-- Navigation -->
                 <nav class="nav">
                     <ul class="nav-list">
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="../index.html">Home</a></li>
                         <li><a href="choice.html">Games</a></li>
-			<li><a href="about.html">About</a></li>
+			            <li><a href="about.html">About</a></li>
                     </ul>
                 </nav>
             </div>
@@ -28,6 +28,8 @@
                 <div id="high-score">High Score: 0</div>
             </div>
 
+            <div id="turn-indicator" class="turn-indicator">Press Start</div>
+
             <div class="board">
                 <div class="panel lightyellow" data-color="lightyellow"></div>
                 <div class="panel lightblue" data-color="lightblue"></div>
@@ -41,7 +43,7 @@
 
             <div id="game-over">
                 <div id="game-over-text"></div>
-                <button id="play-again" class="button">Play Again</button>
+                <button id="play-again" class="button">Return</button>
             </div>
         </section>
 
@@ -57,6 +59,6 @@
             </p>
 	    </footer>
         
-        <script src="hard.js"></script>
+        <script src="../js files/hard.js"></script>
     </body>
 </html>
