--- a/Html_folder/choice.html
+++ b/Html_folder/choice.html
@@ -3,9 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Mode Page</title>
-        <style>
-            
-        </style>
+        <link rel="stylesheet" href="../css files/choice.css">
     </head>
     <body>
         <!-- Header -->
