--- a/Html_folder/about.html
+++ b/Html_folder/about.html
@@ -246,27 +246,27 @@
         <h2>MEET THE CREATORS OF THE GAME!!</h2>
         <div class="profiles-container">
             <div class="profile-card">
-                <img src="Profile_pictures/profile1.jpg">
+                <img src="Images/image1.jpg">
                 <p>Ysabella Mia D. Arboleda</p>
             </div>
             <div class="profile-card">
-                <img src="Profile_pictures/profile2.jpg">
+                <img src="Images/image2.jpg">
                 <p>Keith Margaret B. Balinas</p>
             </div>
             <div class="profile-card">
-                <img src="Profile_pictures/profile3.jpg">
+                <img src="Images/image3.jpg">
                 <p>Ulsemia Jasmine D. Caballero</p>
             </div>
             <div class="profile-card">
-                <img src="Profile_pictures/profile4.jpg">
+                <img src="Images/image4.jpg">
                 <p>Sittie Taznima S. Madid</p>
             </div>
             <div class="profile-card">
-                <img src="Profile_pictures/profile5.jpg">
+                <img src="Images/image5.jpg">
                 <p>Gabriel S. Tan</p>
             </div>
             <div class="profile-card">
-                <img src="Profile_pictures/profile6.jpg">
+                <img src="Images/image6.jpg">
                 <p>Sophia Chilo H. Vargas</p>
             </div>
         </div>
